Protect input names with inherited class from library
- CSRF is moved to parent class that flow classes inhert from

--- a/src/test/resources/templates/uploadFlow/docUploadJourney.html
+++ b/src/test/resources/templates/uploadFlow/docUploadJourney.html
@@ -8,7 +8,7 @@
     <div class="grid">
       <div th:replace="fragments/goBack :: goBackLink"></div>
       <main id="content" role="main" class="form-card spacing-above-35"
-            th:with="dzFormName='doc-upload-files'">
+            th:with="dzFormName='uploadTest'">
         <th:block
             th:replace="'fragments/cardHeader' :: cardHeader(header='Upload Documents')"/>
         <th:block
@@ -29,7 +29,7 @@
   </section>
 </div>
 <script>
-  FormFlowDZ.hideContinueIfNoFiles([[${inputName}]], 'submit');
+  FormFlowDZ.hideContinueIfNoFiles('uploadTest', 'submit');
 </script>
 </body>
 </html>
